[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
aiofiles = "^0.8.0"
PyNaCl = "^1.5.0"
ffmpeg = "^1.4"
youtube_dl = "^2021.12.17"
ffprobe = "^0.5"
Flask = "^2.0.3"
"discord.py" = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"